# AndroidClientServer

./: AuthorizationPage.qml  CMakeLists.txt  ChatsView.qml  Main.qml  Numbers.json  RecoveryPassPage.qml  RegistrationPage.qml  UsersChatPg.qml  main.cpp  Сountrys.json
